--- a/plugin.xml
+++ b/plugin.xml
@@ -102,9 +102,17 @@
                 <param name="ios-package" value="CDVFileTransfer" />
             </feature>
         </config-file>
+      
+        <config-file target="*-Info.plist" parent="UIFileSharingEnabled">
+          <true/>
+        </config-file>
+        <config-file target="*-Info.plist" parent="LSSupportsOpeningDocumentsInPlace">
+          <true/>
+        </config-file>
+      
         <header-file src="src/ios/CDVFileTransfer.h" />
         <source-file src="src/ios/CDVFileTransfer.m" />
-
+      
         <framework src="AssetsLibrary.framework" />
     </platform>
 
